<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ocean Guardian</string>
    <string name="btn_logingov">Entrar com</string>
    <string name="btn_cadastro">ou cadastre-se</string>
    <string name="saudacao">Olá,</string>
    <string name="home">Home</string>
    <string name="username">Rogério</string>
    <string name="text_home">Denúncias ativas perto de você</string>
    <string name="denuncia_1">Baleia encalhada</string>
    <string name="denuncia_2">Lixo na orla</string>
    <string name="denuncia_3">Tartaruga encalhada</string>
    <string name="denuncia_4">Grande quantidade de lixo no mar</string>
    <string name="denuncia_5">Despejo inadequado de resíduos</string>
    <string name="denuncia_6">Derramamento de óleo</string>
    <string name="local_1">Santos-SP</string>
    <string name="local_2">Local</string>
    <string name="local_3">Local</string>
    <string name="local_4">Local</string>
    <string name="local_5">Local</string>
    <string name="local_6">Local</string>
    <string name="local_1_2">Praia do Gonzaga</string>
    <string name="data_1" tools:ignore="TypographyDashes">27/05/24 - 14:16</string>
    <string name="data_2" tools:ignore="TypographyDashes">27/05/24 - 14:03</string>
    <string name="data_3" tools:ignore="TypographyDashes">27/05/24 - 12:36</string>
    <string name="data_4" tools:ignore="TypographyDashes">27/05/24 - 11:24</string>
    <string name="data_5" tools:ignore="TypographyDashes">27/05/24 - 10:58</string>
    <string name="data_6" tools:ignore="TypographyDashes">27/05/24 - 10:15</string>
    <string name="telefonesuteis_1">Bombeiros</string>
    <string name="telefonesuteis_2">Polícia</string>
    <string name="telefonesuteis_3">Guarda Costeira</string>
    <string name="txt_denuncia">Faça sua Denúncia</string>
    <string name="hint_titulo">Título</string>
    <string name="hint_descrição">Descrição</string>
    <string name="hint_local">Localização</string>
    <string name="hint_detalhes">Detalhes da Localização (Número, complemento ou ponto de referência)</string>
    <string name="btn_salvar">Salvar</string>
    <string name="detalhes_denuncia_">Baleia encalhada na região</string>
    <string name="mapa">Mapa</string>
    <string name="txt_mapa">Verifique aqui as denúncias mais próximas de você</string>
    <string name="login_criesuaconta">Crie sua Conta</string>
    <string name="cadastro_hint_nomecompleto">Nome Completo</string>
    <string name="cadastro_hint_usuario">Nome de Usuário</string>
    <string name="cadastro_hint_email">Email</string>
    <string name="cadastro_hint_celular">Número de Celular</string>
    <string name="cadastro_hint_senha">Senha</string>
    <string name="cadastro_hint_confir_senha">Confirmar senha</string>
    <string name="login_btn_cadastrar">Cadastrar</string>
    <string name="desc_denun1">A Baleia estava encalhada na região próxima a Fonte do Sapo</string>
    <string name="content_desc_btnvoltar">Botão Voltar</string>
    <string name="content_desc_img1">Imagem da denúncia</string>
    <string name="content_add_img">Adicione Imagens</string>
    <string name="popupmenu_item1">Bombeiros</string>
    <string name="popupmenu_item2">Polícia</string>
    <string name="popupmenu_item3">Guarda Costeira</string>


</resources>