<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_criesuaconta"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="103dp" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/cadastro_hint_nomecompleto"
        android:ems="10"
        android:hint="@string/cadastro_hint_nomecompleto"
        android:inputType="text|textPersonName"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="163dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/cadastro_hint_email"
        android:ems="10"
        android:hint="@string/cadastro_hint_email"
        android:inputType="text|textEmailAddress"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="307dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/cadastro_hint_celular"
        android:ems="10"
        android:hint="@string/cadastro_hint_celular"
        android:inputType="phone"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="377dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/cadastro_hint_senha"
        android:ems="10"
        android:hint="@string/cadastro_hint_senha"
        android:inputType="text|textPassword"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="446dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/cadastro_hint_senha"
        android:ems="10"
        android:hint="@string/cadastro_hint_senha"
        android:inputType="text|textPassword"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="512dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/cadastro_hint_usuario"
        android:ems="10"
        android:hint="@string/cadastro_hint_usuario"
        android:inputType="text|textPersonName"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="233dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/darkblue"
        android:text="@string/login_btn_cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="600dp" />


</androidx.constraintlayout.widget.ConstraintLayout>