<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_denuncia"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="73dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_detalhes"
        android:inputType="textMultiLine"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:textColor="@color/darkgray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        tools:layout_editor_absoluteY="315dp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/white"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_add_foto"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="479dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/hint_descrição"
        android:inputType="textMultiLine"
        android:paddingStart="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/darkgray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        tools:layout_editor_absoluteY="189dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:drawableEnd="@drawable/icon_locationfill"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/hint_local"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/darkgray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
        tools:layout_editor_absoluteY="252dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@color/darkblue"
        android:text="@string/btn_salvar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="605dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:autofillHints="@string/cadastro_hint_nomecompleto"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/hint_titulo"
        android:inputType="text|textPersonName"
        android:paddingStart="15dp"
        android:textColor="@color/darkgray"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="127dp" />

    <ImageButton
        android:id="@+id/btn_voltar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/btn_voltar"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="26dp" />

</androidx.constraintlayout.widget.ConstraintLayout>