<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn_voltar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/btn_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/criesuaconta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/denuncia_1"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/criesuaconta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:text="@string/local_1"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criesuaconta" />

    <TextView
        android:id="@+id/criesuaconta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_1_2"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="133dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="320dp"
        android:layout_height="260dp"
        android:src="@drawable/img_denun_41"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="187dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/desc_denun1"
        android:inputType="textMultiLine"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:singleLine="true"
        android:textColor="@color/darkgray"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="471dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:background="@drawable/corners"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="644dp" />

</androidx.constraintlayout.widget.ConstraintLayout>